# 25-cpp-homework

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  conanfile.py  pixi.toml  vcpkg.json  vcpkg_provider.cmake
.vcpkg/: vcpkg_provider.cmake
.vcpkg/scripts/: vcpkg_const.py  vcpkg_init.py  vcpkg_install.py  vcpkg_utils.py
homework01/: CMakeLists.txt
homework01/task01/: CMakeLists.txt  RAEDME.md  main.cpp
homework01/task02/: CMakeLists.txt  README.md  main.cpp
homework01/task03/: CMakeLists.txt  README.md  main.cpp
homework01/task04/: CMakeLists.txt  README.md  main.cpp
homework02/: CMakeLists.txt
homework02/task01/: CMakeLists.txt  README.md  main.cpp
homework02/task02/: CMakeLists.txt  README.md  main.cpp
homework02/task03/: CMakeLists.txt  README.md  main.cpp
homework02/task04/: CMakeLists.txt  README.md  main.cpp
homework02/task05/: CMakeLists.txt  README.md  main.cpp
homework02/task06/: CMakeLists.txt  README.md  main.cpp
homework03/: CMakeLists.txt
homework03/task01/: CMakeLists.txt  README.md  main.cpp
homework03/task02/: CMakeLists.txt  README.md  main.cpp
practice01/: .gitignore  BLOG.md  CMakeLists.txt  README.md
practice01/include/core/api/: bili_sign_client.h  bili_sign_executor.h  bili_sign_object.h  bili_wbi_object.h
practice01/include/core/api/client/: _base_client.h  api_client.h  app_client.h  login_api.h  passport_api.h  passport_client.h  search_client.h
practice01/include/core/api/dto/: api_dto.h  app_dto.h  login_dto.h  passport_dto.h  search_dto.h
practice01/include/core/module/: cache_module.h  global_signal_model.h  global_signal_module.h  image_cache_module.h  resource_module.h  setting_module.h  translate_module.h  viewmodel_module.h
practice01/include/model/: bangumi_model.h  base_viewmodel.h  follow_model.h  home_model.h  page_home_model.h  page_home_viewmodel.h  page_mine_model.h  page_mine_viewmodel.h  page_search_model.h  page_search_viewmodel.h  search_model.h  user_model.h  window_bangumi_viewmodel.h  window_login_viewmodel.h  window_main_viewmodel.h
practice01/include/model/dto/: bangumi_dto.h  follow_dto.h  home_dto.h  page_search_dto.h  search_dto.h  user_dto.h
practice01/include/utils/: oatpp_dto.h  oatpp_remapper.h  remote_resources.h  resources.h  settings.h  singleton.h  stdafx.h  string.h
practice01/include/viewmodel/: base_viewmodel.h  page_home_viewmodel.h  page_mine_viewmodel.h  page_search_viewmodel.h  window_bangumi_viewmodel.h  window_login_viewmodel.h  window_main_viewmodel.h
practice01/res/qml/: App.qml
practice01/res/qml/component/: Badge.qml  BangumiItem.qml  FollowPage.qml
practice01/res/qml/component/bangumi/: BangumiList.qml
practice01/res/qml/component/navigation/: NavCommonItems.qml  NavFooterItems.qml  qmldir
practice01/res/qml/pages/: HomePage.qml  MinePage.qml  SearchPage.qml  SettingPage.qml
practice01/res/qml/window/: AboutWindow.qml  BangumiWindow.qml  LoginWindow.qml  MainWindow.qml
practice01/res/translations/: BiliQt_en.ts  BiliQt_zh_CN.ts
practice01/src/: main.cpp
practice01/src/core/: main.cpp
practice01/src/core/api/: bili_sign_client.cpp  bili_sign_executor.cpp  bili_sign_object.cpp  bili_wbi_object.cpp
practice01/src/core/module/: cache_module.cpp  global_signal_module.cpp  image_cache_module.cpp  resource_module.cpp  setting_module.cpp  translate_module.cpp  viewmodel_module.cpp
practice01/src/model/: bangumi_model.cpp  follow_model.cpp  home_model.cpp  page_home_model.cpp  page_home_viewmodel.cpp  page_mine_model.cpp  page_mine_viewmodel.cpp  page_search_model.cpp  page_search_viewmodel.cpp  search_model.cpp  user_model.cpp  window_bangumi_viewmodel.cpp  window_login_viewmodel.cpp  window_main_viewmodel.cpp
practice01/src/ui/: MainWindow.qml
practice01/src/ui/globs/: NavigationItems.qml
practice01/src/utils/: oatpp_dto.cpp  oatpp_remapper.cpp  remote_resources.cpp  resources.cpp  string.cpp
practice01/src/viewmodel/: page_home_viewmodel.cpp  page_mine_viewmodel.cpp  page_search_viewmodel.cpp  window_bangumi_viewmodel.cpp  window_login_viewmodel.cpp  window_main_viewmodel.cpp
scripts/: vcpkg_clean.py  vcpkg_const.py  vcpkg_init.py  vcpkg_install.py  vcpkg_utils.py
